# Anvil-

./: .gitignore  ANVIL_MASTER_EVALUATION_PROMPT.md  ANVIL_MASTER_EVALUATION_PROMPT_v2.md  Anvil_Backtest_Runbook.md  Anvil_Realtime_Sim_BUILD.md  Anvil_Realtime_Sim_Report.md  Anvil_Realtime_Sim_v2_Report.md  CLAUDE_CODE_PROMPT.md  Integrating Zerodha with Claude for portfolio management chat  future_waves_of_upgrade.md  next_wave.md  unstox.py
anvil/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  MERGED_VERSION_AUDIT.md  README - anvil.md  README.md  _smoke_http.py  alembic.ini  docker-compose.local.yml  docker-compose.yml  pyproject.toml  run-anvil.bat  run-anvil.ps1  run.ps1
anvil/.github/workflows/: ci.yml
anvil/anvil/: __init__.py  cli.py  config.py  gating.py  models.py  obs.py  pipeline.py
anvil/anvil/agent/: __init__.py  analyst.py  guardrail.py
anvil/anvil/api/: __init__.py  app.py  buildinfo.py  cache.py  deps.py
anvil/anvil/auth/: __init__.py  broker_store.py  crypto.py  deps.py  kite_auth.py  passwords.py  sessions.py  token_store.py  upstox_auth.py  users.py
anvil/anvil/backtest/: __init__.py  aggregate.py  asof.py  data.py  full_cert.py  gate0.py  gate_report.py  health.py  horizon.py  orthogonality.py  revalidate.py  robustness.py  runner.py  tip_backtest.py  trials.py  validation.py  vrp_prior.py
anvil/anvil/calibration/: __init__.py  combine.py  conformal.py  crossval.py  isotonic.py  service.py  store.py
anvil/anvil/db/: __init__.py  engine.py  models.py  repo.py
anvil/anvil/engine/: __init__.py  alerts.py  brief.py  chain_dynamics.py  constituents.py  dealer_flow.py  decision_brief.py  event_risk.py  flow_momentum.py  forward.py  gex.py  greeks.py  higher_order.py  implied_dist.py  iv_crush.py  momentum.py  montecarlo.py  oi.py  participant_oi.py  portfolio.py  provenance.py  realized_vol_forecast.py  regime.py  regime_score.py  scenarios.py  term_structure.py  touch_probability.py  unusual.py  util.py  vol.py  whatchanged.py
anvil/anvil/execution/: __init__.py  gateway.py  groww_gateway.py
anvil/anvil/factors/: __init__.py  base.py  chain_analytics.py  dealer_flow.py  equities.py  events.py  index_options.py  momentum.py  regime_gate.py
anvil/anvil/ingest/: __init__.py  backfill.py  base.py  bhavcopy.py  candle_cache.py  capture.py  demo.py  dhan.py  events.py  groww.py  instruments.py  kite.py  macro.py  nse_eod.py  positioning.py  source.py  upstox.py  yahoo.py
anvil/anvil/ledger/: __init__.py  ledger.py  scoring.py
anvil/anvil/live/: __init__.py  bar_aggregator.py  chain_source.py  clock.py  closes.py  cycle.py  daily.py  eventbus.py  live_runner.py  realday.py  realday_source.py  realtime.py  recorder.py  recorder_loop.py  run_registry.py  supervisor.py  trading_calendar.py
anvil/anvil/paper/: __init__.py  account.py  calibration.py  costs.py  gateway.py  governor.py  margin.py  mtm.py  perf_lab.py  repo.py  report.py  state.py
anvil/docs/: ANVIL.md  Anvil wave2 challenge  DEPLOY.md  METHODOLOGY.md  PHASE1_BACKLOG.md  PITCH.md  SECURITY.md  TIPS_REBUILD.md  hypothesis.md
anvil/reference/: .dockerignore  .gitignore  Anvil-vs-VersionB-Comparison.md  CLAUDE.md  COMPARISON_AND_MERGE.md  INDEPENDENT_AUDIT_REPORT.md  MERGED_BLUEPRINT.md  MERGED_BUILD_AUDIT.md  NORTH_STAR.md  PROJECT_SPEC.md  README.md  docker-compose.yml  handoff.md
anvil/revamp/: Anvil_Build_Plan.md  Anvil_Master_Build_Plan_v3.md  Anvil_Research_Report.md  W3.md
anvil/scripts/: migrate_tips_v2.py
anvil/tests/: conftest.py  test_advanced_analytics.py  test_agent.py  test_alerts.py  test_api_routes.py  test_archive_streaming.py  test_auth.py  test_auth_and_brokers.py  test_auto_resolution.py  test_backfill.py  test_backfill_ratelimit.py  test_backtest_guards.py  test_bar_aggregator.py  test_bar_store.py  test_bhavcopy.py  test_bhavcopy_legacy.py  test_bhavcopy_stocks.py  test_brief_copilot.py  test_broker_validation.py  test_calendar.py  test_calibration_combine.py  test_calibration_conformal.py  test_calibration_crossval.py  test_calibration_integration.py  test_calibration_isotonic.py  test_calibration_score.py  test_calibration_service.py  test_calibration_store.py  test_candle_cache.py  test_chain_dynamics.py  test_cockpit_api.py  test_connectors.py  test_constituents.py  test_coverage_logging.py  test_cpcv_combinatorial.py  test_cpcv_gate.py  test_data_health.py  test_db_concurrency.py  test_db_spine.py  test_dealer_flow.py  (+82 more)
anvil/web/: index.html  package-lock.json  package.json  vite.config.ts
(+188 files in other folders)
