[project]
name = "anvil"
version = "0.1.0"
description = "India-first options intelligence engine — OI, Greeks, GEX, implied distribution, beta-weighted portfolio risk."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.5",
    "duckdb>=0.10",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
# Live data + websockets + cross-check libs. Kept optional so the core engine and
# tests run offline with zero native-build dependencies.
live = ["websockets>=12.0"]
crosscheck = ["py_vollib>=1.0.1"]   # optional Greeks parity check; may lack 3.14 wheels
brokers = ["growwapi>=1.5.0", "pyotp>=2.9", "kiteconnect>=4.2"]  # live broker SDKs (use in the 3.12 container)
copilot = ["anthropic>=0.40"]       # grounded AI analyst (optional; deterministic fallback otherwise)
schedule = ["apscheduler>=3.10"]    # optional dev scheduler for the daily loop (Task Scheduler preferred)
# Multi-user app spine (M1+): async ORM + migrations + auth/crypto. Postgres in prod (asyncpg),
# sqlite+aiosqlite locally for dev/tests. asyncpg is prod-only (installed in the 3.12 container);
# it may lack wheels on bleeding-edge CPython, so local dev runs on aiosqlite.
app = [
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
]
prod = ["asyncpg>=0.29"]            # async Postgres driver (use in the 3.12 container / cloud host)
dev = ["pytest>=8.0", "pytest-xdist>=3.6", "ruff>=0.5"]

[project.scripts]
anvil = "anvil.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["anvil*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Parallel by default (pytest-xdist): ~14min → a few min on multicore. `--dist loadscope` keeps each
# test module on ONE worker so any intra-module state on the per-worker DuckDB store (isolated in
# conftest by PYTEST_XDIST_WORKER) behaves exactly as a serial run; only cross-worker file contention
# is removed. Override with `-n0` for a single-process debug run.
addopts = "-q -n auto --dist loadscope"

[tool.ruff]
# Keep `ruff check .` green repo-wide. `data/` holds scratch fetch scripts + generated
# caches/DBs (not maintained code); `reference/` is the vendored old OIP snapshot kept
# only for merge history; alembic `versions/` are autogenerated revision files; `.runtmp/`
# holds ad-hoc probe scripts + run logs — none are part of the hand-maintained package.
extend-exclude = ["data", "reference", ".venv", ".runtmp", "anvil/db/migrations/versions"]
